--- a/Food_Sales_Predictions10_24.ipynb
+++ b/Food_Sales_Predictions10_24.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16l75SrsfXjcrAwSd67gWp_WsLfdKgHFl",
-      "authorship_tag": "ABX9TyPmyQxQ9m4I6Lmb5wxrCgMX",
+      "authorship_tag": "ABX9TyMrZFMQDK2ZWtIbOul0SDvM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
           "height": 696
         },
         "id": "857b8csVZTeQ",
-        "outputId": "68fde22a-2b9e-444e-9058-458ae994eba5"
+        "outputId": "4ca7b4fc-43bc-4baa-9639-422de9a248f5"
       },
       "execution_count": 2,
       "outputs": [
@@ -135,7 +135,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-682fbe01-7ee1-4b26-b9f5-da0f3f05abc0\">\n",
+              "  <div id=\"df-b20f570c-40d3-49c2-a290-252457440313\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -248,7 +248,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-682fbe01-7ee1-4b26-b9f5-da0f3f05abc0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b20f570c-40d3-49c2-a290-252457440313')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -299,12 +299,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-682fbe01-7ee1-4b26-b9f5-da0f3f05abc0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b20f570c-40d3-49c2-a290-252457440313 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-682fbe01-7ee1-4b26-b9f5-da0f3f05abc0');\n",
+              "          const element = document.querySelector('#df-b20f570c-40d3-49c2-a290-252457440313');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -360,7 +360,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4CuwiDIJazn7",
-        "outputId": "a228609a-0793-4f60-9808-af8010075fef"
+        "outputId": "1513004e-bc1f-4f53-c197-5992f65d64dc"
       },
       "execution_count": 3,
       "outputs": [
@@ -396,7 +396,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LzY769Zmb-QG",
-        "outputId": "d79e07eb-52ab-45c7-a3ca-d6a6cc902cc6"
+        "outputId": "b9d94c55-c78e-49fe-e50a-4acb94324c87"
       },
       "execution_count": 4,
       "outputs": [
@@ -447,7 +447,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EVBaF9s-cfIK",
-        "outputId": "b7b72825-0c65-484e-d8df-d1dfc2a5f92e"
+        "outputId": "a49e5991-5d92-4221-d289-dff11bac46e3"
       },
       "execution_count": 5,
       "outputs": [
@@ -483,7 +483,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L1qkBzYOdbDh",
-        "outputId": "5dff9fb8-9b44-409b-89ab-0370a3204d77"
+        "outputId": "849b57a4-dda9-4191-d71f-0469c0174454"
       },
       "execution_count": 6,
       "outputs": [
@@ -530,7 +530,7 @@
       "metadata": {
         "id": "aHlm3uPBXK78"
       },
-      "execution_count": 29,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -542,12 +542,14 @@
       "metadata": {
         "id": "zfubtcn3eNfh"
       },
-      "execution_count": 30,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The column 'Item_Weight is a float type, so decided to go with replacing it with the mean. 'Outlet_Size on the other hand is object type, so filling in with 'Missing' seemed appropriate."
+      ],
       "metadata": {
         "id": "w_c38uLTaqyi"
       }
@@ -572,9 +574,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gU-v0EbDgoKi",
-        "outputId": "c3a9acf9-ad87-48dd-b802-d3b39aa54ea4"
+        "outputId": "265e4eb9-0639-49e6-9c2c-4376049f01b3"
       },
-      "execution_count": 31,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +598,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 9
         }
       ]
     },
@@ -613,38 +615,78 @@
     {
       "cell_type": "code",
       "source": [
-        "df.nunique()"
+        "df.nunique"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "o7lYzdYcg2nq",
-        "outputId": "89b74bf6-ae4c-4c74-9092-04d117aa665e"
+        "outputId": "4239adf7-4641-4aa5-a93f-05583d9e1b82"
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Item_Identifier              1559\n",
-              "Item_Weight                   416\n",
-              "Item_Fat_Content                2\n",
-              "Item_Visibility              7880\n",
-              "Item_Type                      16\n",
-              "Item_MRP                     5938\n",
-              "Outlet_Identifier              10\n",
-              "Outlet_Establishment_Year       9\n",
-              "Outlet_Size                     4\n",
-              "Outlet_Location_Type            3\n",
-              "Outlet_Type                     4\n",
-              "Item_Outlet_Sales            3493\n",
-              "dtype: int64"
+              "<bound method DataFrame.nunique of      Item_Identifier Item_Weight Item_Fat_Content  Item_Visibility  \\\n",
+              "0              FDA15         9.3          Low Fat         0.016047   \n",
+              "1              DRC01        5.92          Regular         0.019278   \n",
+              "2              FDN15        17.5          Low Fat         0.016760   \n",
+              "3              FDX07        19.2          Regular         0.000000   \n",
+              "4              NCD19        8.93          Low Fat         0.000000   \n",
+              "...              ...         ...              ...              ...   \n",
+              "8518           FDF22       6.865          Low Fat         0.056783   \n",
+              "8519           FDS36        8.38          Regular         0.046982   \n",
+              "8520           NCJ29        10.6          Low Fat         0.035186   \n",
+              "8521           FDN46        7.21          Regular         0.145221   \n",
+              "8522           DRG01        14.8          Low Fat         0.044878   \n",
+              "\n",
+              "                  Item_Type  Item_MRP Outlet_Identifier  \\\n",
+              "0                     Dairy  249.8092            OUT049   \n",
+              "1               Soft Drinks   48.2692            OUT018   \n",
+              "2                      Meat  141.6180            OUT049   \n",
+              "3     Fruits and Vegetables  182.0950            OUT010   \n",
+              "4                 Household   53.8614            OUT013   \n",
+              "...                     ...       ...               ...   \n",
+              "8518            Snack Foods  214.5218            OUT013   \n",
+              "8519           Baking Goods  108.1570            OUT045   \n",
+              "8520     Health and Hygiene   85.1224            OUT035   \n",
+              "8521            Snack Foods  103.1332            OUT018   \n",
+              "8522            Soft Drinks   75.4670            OUT046   \n",
+              "\n",
+              "      Outlet_Establishment_Year Outlet_Size Outlet_Location_Type  \\\n",
+              "0                          1999      Medium               Tier 1   \n",
+              "1                          2009      Medium               Tier 3   \n",
+              "2                          1999      Medium               Tier 1   \n",
+              "3                          1998     Missing               Tier 3   \n",
+              "4                          1987        High               Tier 3   \n",
+              "...                         ...         ...                  ...   \n",
+              "8518                       1987        High               Tier 3   \n",
+              "8519                       2002     Missing               Tier 2   \n",
+              "8520                       2004       Small               Tier 2   \n",
+              "8521                       2009      Medium               Tier 3   \n",
+              "8522                       1997       Small               Tier 1   \n",
+              "\n",
+              "            Outlet_Type  Item_Outlet_Sales  \n",
+              "0     Supermarket Type1          3735.1380  \n",
+              "1     Supermarket Type2           443.4228  \n",
+              "2     Supermarket Type1          2097.2700  \n",
+              "3         Grocery Store           732.3800  \n",
+              "4     Supermarket Type1           994.7052  \n",
+              "...                 ...                ...  \n",
+              "8518  Supermarket Type1          2778.3834  \n",
+              "8519  Supermarket Type1           549.2850  \n",
+              "8520  Supermarket Type1          1193.1136  \n",
+              "8521  Supermarket Type2          1845.5976  \n",
+              "8522  Supermarket Type1           765.6700  \n",
+              "\n",
+              "[8523 rows x 12 columns]>"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 10
         }
       ]
     },
@@ -658,9 +700,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6LnUkn1am5hV",
-        "outputId": "218d16ce-cb95-4d08-8334-34348e225f93"
+        "outputId": "7a038c44-d589-412a-d402-25350b46d631"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,9 +741,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ldPaBH_qnGGK",
-        "outputId": "b7a26dcd-248e-4194-9254-7ea162489084"
+        "outputId": "fe591aeb-760f-4c36-e6a0-3215bfe5c12e"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +758,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -733,9 +775,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WAVfQauXn0A7",
-        "outputId": "f332f639-a6dc-4d89-a2af-85bea376e608"
+        "outputId": "40267293-9e52-447f-8e67-a5b75912ba1f"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +789,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -761,9 +803,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7fDwgNV6pglK",
-        "outputId": "27c1f944-e44b-4eca-dc93-ca072a9b28e5"
+        "outputId": "1aaafa34-7fff-4bf6-9dfa-e071f1a2a0e9"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +819,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -792,9 +834,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SLQG3apvqKsi",
-        "outputId": "8315198e-f396-4daa-82eb-f250ba21f621"
+        "outputId": "02404258-236b-43f3-c884-289d4c0ab2bb"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +850,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -833,9 +875,9 @@
           "height": 300
         },
         "id": "CAP9T1r7rN6w",
-        "outputId": "870dddec-2f37-441f-deda-db95c76b7fb0"
+        "outputId": "e4c61f1a-7299-4686-e70f-17b80f064236"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,7 +905,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-efb63d1e-7d73-44c8-bccc-b49236c60f90\">\n",
+              "  <div id=\"df-638bc820-a871-4403-be11-4118f947e893\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -949,7 +991,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-efb63d1e-7d73-44c8-bccc-b49236c60f90')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-638bc820-a871-4403-be11-4118f947e893')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1000,12 +1042,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-efb63d1e-7d73-44c8-bccc-b49236c60f90 button.colab-df-convert');\n",
+              "          document.querySelector('#df-638bc820-a871-4403-be11-4118f947e893 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-efb63d1e-7d73-44c8-bccc-b49236c60f90');\n",
+              "          const element = document.querySelector('#df-638bc820-a871-4403-be11-4118f947e893');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1028,7 +1070,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
